<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TechCook</string>
    <string name="LogoTitle">Logo Title</string>
    <string name="LogoImage">Logo Image</string>
    <string name="Login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="aboutustwo">About Us</string>
    <string name="aboutus">Meet the Crew</string>
    <string name="logging">Logging In....</string>
    <string name="Appetizer">Appetizer</string>
    <string name="Salads">Salads</string>
    <string name="Snacks">Snacks</string>
    <string name="Instructions">Instructions</string>
    <string name="Ingredients">Ingredients</string>
    <string name="RecipeInfo">Recipe Info</string>
    <string name="OtherRecipe">Other Recipes</string>
    <string name="calamares">Crunchy Calamares Recipe in 15 Minutes</string>
    <string name="calamaresDesc">There is no denying that deep-fried food is heaven-sent on any given day. Who can resist their fantastic crunch and flavor? Why do you think so many Filipino street food go through the fryer? French fries, fish balls, dynamite, and siomai are dependable picks. But what can outshine all these is a good calamares recipe.\n\n

        With the help of some pantry staples and easy cooking techniques, you can already make restaurant-quality golden squid rings. Master this Pinoy-style calamares recipe to achieve a crisp coating and avoid rubbery results. The best part is it only takes 15 minutes to replicate. Next time the craving hits, bring out this recipe and get cooking.
        </string>
    <string name="calamaresIngredients">2 tbsp sriracha\n\n
        1/2 cup Lady’s Choice Real Mayonnaise\n\n
        1 pc Knorr Chicken Cube, mashed\n\n
        2-3 pcs eggs, beaten\n\n
        500 g medium squid, cleaned, peeled, and sliced into rings\n\n
        pinch of ground black pepper\n\n
        2 cups cooking oil\n\n
        1/2 cup cornstarch
        </string>
    <string name="calamaresInstructions">Step 1\n
        Make the sriracha mayo: Combine all ingredients in a bowl. Mix well and chill for 10-15 minutes.\n\n

        Step 2\n
        Mix Knorr Chicken Cube and eggs until well combined. Add squid and season with pepper.\n\n

        Step 3\n
        Heat oil in a deep-frying pan over medium flame.\n\n

        Step 4\n
        Dredge squid in cornstarch, shaking off any excess. Cook squid in batches, dropping one ring at a time. Fry until golden brown, then drain on a paper towel or wire rack. Serve immediately with sriracha mayo.
        </string>
    <string name="frenchfries">French Fries With Chili Honey Mayo Dip</string>
    <string name="frenchfriesDesc">Can’t get enough of french fries? Just wait until you start enjoying them with a homemade, sweet ‘n’ spicy mayonnaise dip. This simple mixture of chili powder, honey, and Lady’s Choice Real Mayonnaise makes everyone’s favorite crispy merienda even more satisfying.\n\n

This versatile french fry dip also works for potato chips, chicken nuggets, tempura, and other deep-fried goodies. Do you prefer healthier dippers? No problem! Pair this with sliced veggies and whole wheat crackers for a nutritious treat. You can even use it in other forms: turn it into an easy salad dressing (just add water!) or add it to eggs for a fluffier scramble. It’s your new staple condiment!
        </string>
    <string name="frenchfriesIngredients">
        1 cup Lady’s Choice Real Mayonnaise\n\n\n
        1/4 cup honey\n\n\n
        1 tsp chili powder\n\n\n
        french fries, to serve
        </string>
    <string name="frenchfriesInstructions">
        Step 1\n
        Combine Lady’s Choice Real Mayonnaise\n and honey in a bowl; mix well.\n Add chili powder and stir well.\n\n\n
        Step 2\n
        Serve dip chilled or at room temperature\n with crispy french fries
        </string>
    <string name="pork_sandwich">Pulled Pork Sandwich</string>
    <string name="porkSandwichDesc">
        Classic sandwich ingredients prepared with a twist using Lady\'s Choice Bacon Spread. Give new life to your family\'s snack time.
        </string>
    <string name="porkSandwichIngredients">\n\n\n
        3 pc burger bun, sliced into half, toasted\n\n\n
        600 grams pork barbecue, cooked\n\n\n
        ¾ cup Lady\'s Choice bacon spread\n\n\n
        6 tbsps barbecue sauce\n\n\n
        6 pcs dill pickles, sliced\n\n\n
        6 slices plum tomatoes\n\n\n
        9 slices cucumber
        </string>
    <string name="porkSandwichInstructions">
        Step 1\n
        Shred prepared pork barbecue (you may use your leftover). Mix together Lady’s Choice Bacon Spread and barbecue sauce.\n\n\n
        Step 2\n
        Arrange the shredded pork barbecue on the first half of the bun. Top with pickles, tomatoes, and cucumber then cover with the other half of the bun.
        </string>
    <string name="mini_pizza">Mini Pizza Recipe</string>
    <string name="miniPizzaDesc">
        This simple kiddie snack recipe uses a simple homemade pizza dough topped with fresh flavors of mozzarella, ham, tomatoes and oregano.\n\nTips\n
Par-baking ensures the dough will be fully cooked after the topping has been added. And should you decide not to use it right away, you can freeze them and just take it out of the freezer anytime you feel like baking mini pizzas.


        </string>
    <string name="miniPizzaIngredients">
        250 ml milk\n\n\n
        1 Knorr Beef Cube\n\n\n
        1 cup flour\n\n\n
        1 tbsp butter\n\n\n
        1 tbsp grated cheese\n\n\n
        100 g cooked ham\n\n\n
        2 tomatoes, sliced\n\n\n
        1 onion, cut into strips\n\n\n
        250 g mozarrella cheese\n\n\n
        100 g olives\n\n\n
        dried oregano to taste
        </string>
    <string name="miniPizzaInstructions">
        Step 1\n
        Here’s a pizza dough recipe that will surely encourage you to make pizza more often because it’s not complicated to do and it does not contain yeast for the dough to rise.\n\n\n
        Step 2\n
        Let’s get started by making the dough. In a pan, over low heat, pour in the milk and allow this to simmer for only 40 seconds. Drop in the Knorr Beef Cube and allow it to dissolve. Turn off the heat and just let it cool down for about 5 minutes.\n\n\n
        Step 3\n
        Slowly mix in the flour, stirring well to prevent it from clumping together. Now, add the butter and the 1 tbsp cheese next.\n\n\n
        Step 4\n
        Transfer the dough to a work surface that is lightly coated with flour and start kneading the dough until all ingredients are well incorporated. Divide it into 4 part and shape and roll it into 4-inch diameter disks. Par-baking ensures the dough will be fully cooked after the topping has been added.  And should you decide not to use it right away, you can freeze them and just take it out of the freezer anytime you feel like baking mini pizzas.\n\n\n
        Step 5\n
        Once done, place the mini doughs in a baking sheet and par-bake them in a pre-heated oven until it becomes slightly brown.\n\n\n
        Step 6\n
        Now that our mini pizzas have been par-baked, cover them with the mozzarella cheese and arrange the ham, tomatoes, onions and olives around the top. Bake until the cheese is melted and the topping cooked.\n\n\n
        Step 7\n
        Now you can enjoy pizza not only for merienda but as baon, as a snack or for breakfast too. Whatever time of day, this pizza is a welcome treat!
        </string>
    <string name="kani_salad">15-Minute Mango and Kani Salad</string>
    <string name="kaniSaladDesc">
        Many Filipinos dream of flying to Japan, walking the busy streets of Tokyo, and eating authentic Japanese dishes. The next best thing if you’re still saving up for that ticket? Cook an oishii feast at home! Fry up some ebi tempura, prep California maki, and make ramen from scratch – they’re easier than you think. And don’t forget to build a kani salad to round out the meal!\n\n
        You want something light and fresh to balance out your menu. With sweet mangoes, crunchy vegetables, and crabsticks, this salad is a perfect choice. The best part? It takes 15 minutes max to whip up. Try this kani salad recipe and transport your taste buds to the Land of the Rising Sun.
        </string>
    <string name="kaniSaladIngredients">
        1 cup Lady\'s Choice Real Mayonnaise\n\n
        2 1/2 tbsp ketchup\n\n
        2 tbsp pickle relish (optional)\n\n
        salt and sugar, to season\n\n
        2 pcs iceberg lettuce, cut into bite-sized pieces\n\n
        1/4 pc red cabbage, sliced thinly\n\n
        3 pcs ripe mangoes, diced\n\n
        12 pcs Japanese crabsticks, shredded\n\n
        1 pc cucumber, cut into strips\n\n
        1 tsp tobiko fish roe\n\n
        1 pc nori, cut into strips\n\n
        wonton wrappers, cut into strips and deep-fried
        </string>
    <string name="kaniSaladInstructions">
        Step 1\n
        Make the Thousand Island dressing: Combine all ingredients in a bowl. Mix well and refrigerate until ready to serve.\n\n
        Step 2\n
        Combine lettuce, cabbage, mangoes, crabsticks, and cucumber in a bowl. Drizzle prepared dressing on top and toss to combine.\n\n
        Step 3\n
        Top salad with tobiko, nori strips, and fried wonton. Serve immediately.
        </string>
    <string name="pako_salad">Summer Pako Salad With a Unique Tamarind Dressing</string>
    <string name="pakoSaladDesc">
        Summer is never complete without beach trips. And in every outing, the food you prepare is central to the day’s enjoyment. Are you looking for ways to level up the usual spread of adobo, inihaw na baboy, and chicken barbecue? Introduce a simple yet refreshing pako salad to balance out your menu.\n\n
        Pinoy ensaladas are a terrific way to reduce the umay factor an all-meat lineup brings. So for your next excursion, skip the meticulous salads, snazzy toppings, and creamy dressings. Go for something light and bright, like this pako salad recipe with a unique tamarind vinaigrette. Plus, it’s easy to customize and takes no time to prep! Ready to master how to make pako salad?
        </string>
    <string name="pakoSaladIngredients">
        1/2 cup vinegar\n\n
        2 tsp minced garlic\n\n
        1 1/2 tbsp honey\n\n
        1-2 tsp Knorr Sinigang Sa Sampalok Mix\n\n
        1 cup canola oil\n\n
        250 g fresh pako (fiddlehead fern), cut into 2-inch pcs\n\n
        2 pcs salted eggs, peeled and quartered\n\n
        3 pcs tomatoes, quartered\n\n
        1/4 cup fried dilis
        </string>
    <string name="pakoSaladInstructions">
        Step 1\n
        Make the tamarind vinaigrette: Combine vinegar, garlic, honey, and Knorr Sinigang sa Samaplok Mix in a bowl; stir well. Slowly whisk in oil. Set aside.\n\n
        Step 2\n
        Arrange pako, salted eggs, tomatoes, and dilis on a serving platter. Drizzle tamarind vinaigrette on top. Toss to combine. Serve immediately.
        </string>
    <string name="caesar_salad">Caesar Salad</string>
    <string name="caesarSaladDesc">
        Prepare a Caesar Salad with ease thanks to Lady\'s Choice Caesar Salad Dressing. Add a Filipino twist to the usual salad recipe.
        </string>
    <string name="caesarSaladIngredients">
        1 head romaine lettuce hearts\n\n\n
        3 pcs hard-boiled egg, quartered\n\n\n
        1 tbsp bacon, fried and chopped\n\n\n
        1 tbsp Parmesan cheese, grated\n\n\n
        1/4 cup croutons
        </string>
    <string name="macaroni_salad">Classic Macaroni Salad</string>
    <string name="cheese_melt">Three-Cheese Mega Melt</string>
    <string name="creamy_eggs">Creamy Deviled Eggs Recipe for Your Next House Party</string>
    <string name="chicken_rice_balls">Chicken Rice Balls Recipe</string>
    <string name="creamy_stuffed_prawns">Creamy Stuffed Prawns</string>
</resources>