<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#191c21"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/titleLogo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/LogoTitle"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/LogoImage"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toEndOf="@+id/titleLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="390dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="25dp"
        app:cardBackgroundColor="#b4a891"
        app:cardCornerRadius="15dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <SearchView
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:queryHint="Search" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="410dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="#F1DDBF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/appetizerButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/Appetizer"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/appetizerbutton" />

            <ImageButton
                android:id="@+id/snackButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/Snacks"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/snackbutton" />

            <ImageButton
                android:id="@+id/saladButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/Salads"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/saladbutton" />

            <ImageButton
                android:id="@+id/aboutusButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/aboutus"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.93"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/aboutus" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView

        android:id="@+id/scrollView2"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="120dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Snack3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/frenchfriesbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/frenchfries"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Salad4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/macaronisaladbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/macaroni_salad"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Appetizer3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/riceballsbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/chicken_rice_balls"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Appetizer4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/stuffedprawnsbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/creamy_stuffed_prawns"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Salad3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/caesarsaladbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/caesar_salad"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Salad1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/kanisaladbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/kani_salad"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Appetizer2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/devileggsbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/creamy_eggs"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Salad2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/pakosaladbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/pako_salad"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Snack1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/minipizzabtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/mini_pizza"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Snack2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/porksandwichbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/pork_sandwich"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Snack4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/calamaresbtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/calamares"
                android:textColor="#f59e6d"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Appetizer1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/threecheesebtn"
                android:scaleType="fitXY"
                android:fontFamily="@font/genshin"
                android:gravity="bottom|center"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/cheese_melt"
                android:textColor="#f59e6d"
                android:textSize="24sp" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
