<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191c21"
    tools:context=".Loading">

    <ImageView
        android:id="@+id/logoTitle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/genshin"
        android:text="@string/Login"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTitle"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#b4a891"
        android:backgroundTint="#80B4A891"
        android:drawablePadding="20dp"
        android:fontFamily="@font/genshin"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/passID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.647" />

    <EditText
        android:id="@+id/passID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userID"
        android:layout_margin="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="84dp"
        android:background="#b4a891"
        android:backgroundTint="#80B4A891"
        android:drawablePadding="20dp"
        android:fontFamily="@font/genshin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userID"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonID"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:backgroundTint="#151D3B"
        android:fontFamily="@font/genshin"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="5"
        android:text="@string/Login"
        android:textColor="#FFBF9B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passID" />

</androidx.constraintlayout.widget.ConstraintLayout>